--- a/css/styles.css
+++ b/css/styles.css
@@ -41,9 +41,9 @@
 #footer {
 	width: 550px;
 	height: 50px;	
-	text-align: left;
+	text-align: center;
 	background-color: rgb(0, 0, 0);
-	float: left;
+	margin: 0 auto;
 }
 
 body  {
